dish images added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a routerLink="recipe">home</a></li>
         <li>Favorites</li>
-        <li>Login</li>
+        <li (click)="wow()">Login</li>
         <li>Register</li>
     </ul>
 </nav>
