--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -22,6 +22,7 @@
         text-align: center;
         font-size: large;
         font-weight: 500;
+        color: rgb(7, 59, 7);
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         background-color: rgba(245, 245, 245, 0.479);
         width: auto;
