dish images added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 
 <app-navbar></app-navbar>
-<div class="recipe-card">
-    <app-recipe-show *ngFor="let img of imgData" [src]="img.imgUrl" [Description]="img.imgDescription"></app-recipe-show>
-    
-    
-</div>
 
-<!-- <router-outlet></router-outlet> -->
+
+<router-outlet></router-outlet>
