--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
 body {
     box-sizing: border-box;
     margin: 0;
+    background-color: rgba(112, 163, 112, 0.233);
 }
