register from progress

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <ul>
         <div class="left-nav">
             <img src="../../assets/images/logo.png" alt="">
-            <li [routerLinkActive]="'active'" IsActiveOptions="{exact: true}"> <a routerLink="" >Home</a></li>
+            <li routerLinkActive='active-link' > <a routerLink="home" >Home</a></li>
             <li>Favorites</li>
         </div>
         <div class="right-nav" >
