--- a/src/app/components/registration-form/registration-form.component.scss
+++ b/src/app/components/registration-form/registration-form.component.scss
@@ -11,4 +11,27 @@
         flex-direction: column;
         align-items: center;
     }
+
+    form {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+
+        button {
+            margin-top: 20px;
+            padding: 15px;
+            border-radius: 5px ;
+            border: 1px dashed grey;
+        }
+        button:hover {
+            border: 1px solid green;
+        }
+
+        select{
+            width:177px
+        }
+    }
+
+   
 }
