--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -62,7 +62,7 @@ nav {
             
             li {
                 
-                margin-right: 30px;
+                margin-right: 12px;
                 padding:20px;
                 list-style: none;
                 text-decoration: none;
@@ -82,6 +82,11 @@ nav {
 
             .login {
                 margin-right: 0px;
+                cursor: pointer;
+            }
+
+            .logout {
+                margin-right: 12px;
                 cursor: pointer;
             }
             
