--- a/src/app/components/registration-form/registration-form.component.scss
+++ b/src/app/components/registration-form/registration-form.component.scss
@@ -1,4 +1,5 @@
 $textcolor: rgb(16, 32, 16);
+$borderColor: rgba(16, 32, 16, 0.596);
 
 .form-wrapper {
     display:flex;
@@ -32,8 +33,8 @@ $textcolor: rgb(16, 32, 16);
 
         input {
             border: 0px;
+            box-shadow: -2px 2px 5px 2px grey;
             padding:10px;
-            border-bottom: 1px solid $textcolor;
             background-color: transparent;
             width: 30vw;
         }
@@ -46,11 +47,13 @@ $textcolor: rgb(16, 32, 16);
         select {
             background-color: transparent;
             padding:10px;
-            width: 30vw ;
+            width: 32vw ;
+            box-shadow: -2px 2px 5px 2px grey;
+            border: 0px;
         }
 
-        select:focus-visible {
-            border: 1px solid $textcolor;
+        select:focus {
+            outline-color: rgb(134, 184, 134);
         }
 
         button {
@@ -58,9 +61,11 @@ $textcolor: rgb(16, 32, 16);
             padding: 15px;
             border-radius: 5px ;
             border: 1px dashed grey;
+            background-color: transparent;
         }
         button:hover {
-            border: 1px solid green;
+            border: 1px solid $borderColor;
+            cursor: pointer;
         }
 
     }
