registering user finished

--- a/src/app/components/registration-form/registration-form.component.html
+++ b/src/app/components/registration-form/registration-form.component.html
@@ -18,10 +18,10 @@
             
         </select>
         <label >Password</label>
-        <input type="password" formControlName="pass">
+        <input type="password" formControlName="pass" placeholder="password">
         <label >Repeat Password</label>
-        <input type="password" formControlName="passRepeat">
-        <button type="submit">submit</button>
+        <input type="password" formControlName="passRepeat" placeholder="Please repeat the password">
+        <button type="submit">Submit</button>
     </form>
     
     </div> 
