--- a/src/app/components/registration-form/registration-form.component.html
+++ b/src/app/components/registration-form/registration-form.component.html
@@ -3,25 +3,35 @@
 <div class="form-wrapper">
     <div class="registration-form">
     <h1>Registration</h1>
-    <p>{{registerForm.value | json}}</p>
+    <!-- <p>{{registerForm.value | json}}</p> -->
+    <!-- <p>{{registerForm.valid}}</p> -->
+    <p>{{registerForm.errors | json}}</p>
     <form  [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <label >First Name</label>
-        <input type="text" formControlName="firstName" placeholder="John">
-        <label >Last Name</label>
-        <input type="text" formControlName="lastName" placeholder="Dow">
-        <label >Email</label>
-        <input type="text" formControlName="email" placeholder="JohnDow@email.com">
+        <label >First Name </label>
+        <input type="text" formControlName="firstName" placeholder="John" [required] minlength="1">
+        <small *ngIf="!registerForm.controls['firstName'].valid"> Field must be filled</small>
+        <label >Last Name </label>
+        <input type="text" formControlName="lastName" placeholder="Dow" required minlength="1">
+        <small *ngIf="!registerForm.controls['lastName'].valid"> Field must be filled</small>
+        
+        <label >Email </label>
+        
+        <input type="email" formControlName="email" placeholder="JohnDow@email.com" required>
+        <small *ngIf="registerForm.controls['email'].invalid"> Please fill valid Email</small>
+        
         <label for="country">Country</label>
         <select name="country" id="country" formControlName="country">
             <option value="">Country</option>
             <option *ngFor="let i of countries"  value="{{i.name}}">{{i.name}}</option>
             
         </select>
-        <label >Password</label>
-        <input type="password" formControlName="pass" placeholder="password">
-        <label >Repeat Password</label>
-        <input type="password" formControlName="passRepeat" placeholder="Please repeat the password">
-        <button type="submit">Submit</button>
+        <label >Password </label>
+            <input type="password" formControlName="pass" placeholder="password" >
+            <small *ngIf="!registerForm.controls['pass'].valid"> Field must be filled</small>        
+        <label >Repeat Password </label>
+            <input type="password" formControlName="passRepeat" placeholder="Please repeat the password" required >
+            <small *ngIf="!registerForm.errors['passwordsMatch'] && !registerForm.valid">Passwords not match</small>
+        <button [disabled]="!registerForm.valid && !registerForm.errors['passwordsMatch']"type="submit">Submit</button>
     </form>
     
     </div> 
