--- a/src/app/components/registration-form/registration-form.component.scss
+++ b/src/app/components/registration-form/registration-form.component.scss
@@ -22,7 +22,7 @@ $borderColor: rgba(16, 32, 16, 0.596);
         display: flex;
         justify-content: center;
         flex-direction: column;
-        align-items: center;
+        // align-items: start;
         // border: 1px solid $textcolor;
     
         label {
@@ -75,6 +75,15 @@ $borderColor: rgba(16, 32, 16, 0.596);
         button:hover {
             border: 1px solid $borderColor;
             cursor: pointer;
+        }
+
+        small {
+            margin-right: 5px;
+            margin-top: 3px;
+            color: rgb(255, 53, 53);
+            font-size: 11px;
+            text-align: end;
+            align-items: flex-end;
         }
 
     }
