--- a/src/app/components/recipe/recipe.component.scss
+++ b/src/app/components/recipe/recipe.component.scss
@@ -70,6 +70,7 @@ $borderColor: rgb(63, 135, 166);
     // margin: 20px;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 15px;
 }
 
 @media screen and (max-width:750px) {
