--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -38,6 +38,14 @@
         flex-direction: column;
         align-items: center;
         width: 50vw;
+
+        .cooking-time{
+            font-weight: 900;
+        }
+
+        img{
+            height: 200px;
+        }
         
     }
 
