--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -5,7 +5,11 @@ form {
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-top: 20px;
+    // margin-top: 20px;
+
+    label {
+        margin-top: 20px;
+    }
 
     button {
         margin-top: 20px;
@@ -13,5 +17,10 @@ form {
         border-radius: 5px;
         border: 1px solid grey;
         background-image: linear-gradient(0.25turn, white, #ebf8e1, $backgroundColor);
+    }
+
+    small {
+        color:red;
+        // margin-bottom: 10px;
     }
 }
