--- a/src/app/components/add-recipe/add-recipe.component.html
+++ b/src/app/components/add-recipe/add-recipe.component.html
@@ -16,12 +16,12 @@
                 </div>
                 <div class="add-steps-button">
                     <label for="">Cooking steps</label>
-                    <textarea name="" id="" cols="30" rows="10" formControlName="steps" ></textarea>
-                    <button>Add steps</button>
+                    <textarea wrap="soft" name="" id="" cols="30" rows="10" formControlName="steps"  ></textarea>
+                    <button (click)="addStep()">Add steps</button>
                 </div>
+                <p *ngIf="stepsArray.length === 0">no steps added</p>
                 
-                
-        
+                <button [disabled]="stepsArray.length == 0" (click)="onSubmit()">Submit recipe</button>  
                 
             </form>
         </div>
@@ -34,5 +34,8 @@
         <ul >
             <li *ngFor="let item of ingredients">{{item}}</li>
         </ul>
+        <p *ngFor="let item of stepsArray; index as i">
+            {{i+1}}-{{item}}
+        </p>
     </div>
 </div>
