--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,6 +1,6 @@
 <div class="recipe-card" [ngStyle]="user.isLogged ? {'margin-top':'100px'}:{}">
         <div *ngFor="let item of fetchedData" class="img-container">
-                <img [src]="item.img | safeUrl" alt="">
+                <img src="path" alt="">
                 <p>{{item.title}}</p>
         </div>
 </div>
