retriving and displaying home page data added with server side

--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,6 +1,10 @@
 <div class="recipe-card" [ngStyle]="user.isLogged ? {'margin-top':'100px'}:{}">
         <div *ngFor="let item of fetchedData" class="img-container">
-                <img src="path" alt="">
-                <p>{{item.title}}</p>
+                <a href=""><img [src]="item.img" alt=""></a>
+                <p class="recipe-name">{{item.title}}</p>
+                <div class="name-container">
+                        <p class="user-name">by {{item.userFirstName}} {{item.userlastName}}</p>
+                        
+                </div>
         </div>
 </div>
