--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -35,18 +35,41 @@
 
     .right-container{
         display: flex;
+        // position: relative;
         flex-direction: column;
         align-items: center;
         width: 50vw;
+        .right-row-container {
+            display: flex;
+            flex-direction: row;
+            .left-row {
+                width: 25vw;
+                background-color: darkkhaki;
+                img{
+                    border-radius: 10px;
+                    width: 100%;
+                    height: 200px;
+                }
+            }
+            .right-row {
+                width: 25vw;
+                background-color: crimson;
+                ul{
+                    width: 100%;
+                    list-style: armenian;
+                    line-break: loose;
+                }
+            }
+            
+            
+            
 
+        }
         .cooking-time{
             font-weight: 900;
         }
 
-        img{
-            border-radius: 10px;
-            height: 200px;
-        }
+        
         
     }
 
