--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,12 +4,20 @@
             <img src="../../assets/images/logo.png" alt="">
             <li routerLinkActive='active-link' > <a routerLink="home" >Home</a></li>
             <li>Favorites</li>
+            <li class="user-details" *ngIf="user.isLogged">
+                <p >
+                    {{user.userShortData?.firstName}}
+                    {{user.userShortData?.lastName}}
+                </p>
+                <img [src]="user.userShortData?.imgName" alt="">
+            </li>
         </div>
         <div class="right-nav" >
             <li *ngIf="!user.isLogged" (click)="modalView($event)" class="login">Login</li>
                 <div class="login-modal" *ngIf="showModal && !user.isLogged">
                     <app-login></app-login>
                 </div>
+            
             <li *ngIf="user.isLogged" (click)="logout()" class="logout">
                 Logout
             </li>
