--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -47,6 +47,7 @@ nav {
                     height: 40px;
                     width: 40px;
                     border-radius: 100px;
+                    object-fit: cover;
                 }
             }
 
