--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,11 +1,11 @@
 <div class="recipe-card" [ngStyle]="user.isLogged ? {'margin-top':'100px'}:{}">
         <div *ngFor="let item of fetchedData" class="img-container">
-                <a href=""><img [src]="item['recipe-img']" alt=""></a>
+                <a href=""><img [src]="item['recipe-img']" alt="" loading="lazy"></a>
                 <p class="recipe-name">{{item.title}}</p>
                 <div class="name-container">
                         <div>
                                 <p class="user-name">by {{item.userFirstName}} {{item.userlastName}}</p>
-                                <img class="profile-img" [src]="item['profile-img']" alt="">
+                                <img class="profile-img" [src]="item['profile-img']" alt="" loading="lazy">
                         </div>
                 </div>
         </div>
